add logo and inprove navbar - in progress

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -7,9 +7,11 @@
 }
 
 body {
-    /* background-image: linear-gradient(180deg, rgb(102, 0, 255), yellow); */
+    background-image: linear-gradient(180deg, rgb(102, 0, 255), yellow);
     height: 100%;
     overflow-y: hidden;
+    margin: 0;
+    padding: 0;
 }
 
 .slide-up-enter-active,
