--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,9 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Lilita+One&family=Montserrat:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&family=Montserrat:wght@800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Monoton:wght@400&display=swap');
 
 * {
-    /* font-family: Montserrat; */
-    font-family: 'Inconsolata', monospace;
+    font-family: 'Inconsolata';
+    /* font-family: 'Inconsolata', monospace; */
 }
 
 body {
